tests/ui/diagnostic_namespace/requires_path.stderr
error: cannot find attribute `diagnostic` in this scope
  --> $DIR/requires_path.rs:1:3
   |
LL | #[diagnostic]
   |   ^^^^^^^^^^ not found in this scope

error: aborting due to 1 previous error

