tests/ui/diagnostic_namespace/requires_path.rs
#[diagnostic]
//~^ERROR cannot find attribute `diagnostic`
pub struct Bar;


fn main() {
}
